--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/Ked57/beam-receiver#readme",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.16.1",
     "@types/node-fetch": "^2.3.4",
+    "@types/uuid": "^3.4.4",
     "@types/webtorrent": "^0.98.5",
     "ava": "^1.4.1",
     "dotenv": "^8.0.0",
@@ -35,9 +37,11 @@
     "typescript": "^3.4.5"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
+    "uuid": "^3.3.2",
     "webtorrent-hybrid": "^2.1.0"
   }
 }
