--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/Ked57/beam-receiver#readme",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.5",
     "@types/express": "^4.16.1",
     "@types/node-fetch": "^2.3.4",
     "@types/uuid": "^3.4.4",
@@ -39,6 +40,7 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
     "uuid": "^3.3.2",
