--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.5",
     "@types/express": "^4.16.1",
+    "@types/multer": "^1.3.7",
     "@types/node-fetch": "^2.3.4",
     "@types/uuid": "^3.4.4",
     "@types/webtorrent": "^0.98.5",
@@ -42,6 +43,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "multer": "^1.4.1",
     "node-fetch": "^2.6.0",
     "uuid": "^3.3.2",
     "webtorrent-hybrid": "^2.1.0"
